# video_fix

./: .env  .eslintrc.js  .pre-commit-config.yaml  ADVANCED_VIDEO_REPAIR_README.md  ALGORITHM_OVERVIEW.md  AdvancedVideoRepair_CMakeLists.txt  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  IMPROVEMENTS_GUIDE.md  NEXT_GEN_IMPROVEMENTS_GUIDE.md  README.md  advanced_video_repair_python.py  arri_alexa_parser.h  blackmagic_parser.h  disk_imager.py  file_carver.py  file_format_detector.cpp  file_format_detector.h  filesystem_parser.py  format_repairers.cpp  format_repairers.h  instractions.txt  launch_phoenixdrs.bat  launch_phoenixdrs.sh  logging_config.py  main.cpp  main.py  main_simple.py  package-lock.json  package.json  performance_optimizer.cpp  performance_optimizer.h  phoenixdrs.py  professional_main.cpp  professional_video_formats.cpp  professional_video_formats.h  pytest.ini  raid_recovery.py  red_camera_parser.cpp  (+12 more)
.claude/: settings.local.json
.kiro/specs/ui-redesign/: design.md  requirements.md  tasks.md
cli/: enhanced_cli.py  main.py
demo/: main.cpp
docs/: conf.py  index.rst  installation.rst
docs/modules/: file_carver.rst
integration/: phoenixdrs_unified.py
integration/hybrid_launcher/: HybridLauncher.h  main.cpp
integration/python_bindings/: video_repair_bindings.cpp
integration/python_integration/: PythonBindings.cpp  PythonBridge.h
logic/: video_formats.py  video_repair_engine.py
src/: main.ts  preload.ts  setupTests.ts
src/components/common/: ErrorBoundary.tsx
src/components/design-system/: index.ts  types.ts  utils.ts
src/components/design-system/Button/: Button.test.tsx  Button.tsx  index.ts
src/components/design-system/Card/: Card.test.tsx  Card.tsx  index.ts
src/components/design-system/ListItem/: ListItem.tsx  index.ts
src/components/design-system/Sidebar/: Sidebar.tsx  index.ts
src/components/design-system/Spinner/: Spinner.tsx  index.ts
src/components/layout/: MainLayout.tsx
src/components/views/: Dashboard.tsx  FileAnalysis.tsx  Settings.tsx  VideoRecovery.tsx  VideoRepair.tsx
src/cpp/: CMakeLists.txt  README.md  STATUS.md  build.bat  build.sh  signatures.json  video_format_detector.h
src/cpp/include/: AIAnalyzer.h  AdvancedCryptAnalyzer.h  BlockchainForensicsEngine.h  CaseManager.h  Common.h  DiskImager.h  DistributedComputingEngine.h  FileCarver.h  ForensicLogger.h  LogViewer.h  MLClassifier.h  MainWindow.h  MemoryForensicsEngine.h  NetworkForensicsEngine.h  NewCaseDialog.h  PerformanceMonitor.h  RaidReconstructor.h  SettingsDialog.h  VideoRebuilder.h  WorkerThread.h
src/cpp/include/AdvancedVideoRepair/: AIEnhancedProcessor.h  AdvancedVideoRepairEngine.h  CudaUtils.h  EnhancedPerformanceEngine.h  FFmpegUtils.h  NextGenEnhancements.h  ProfessionalFormats.h  ThreadSafeFrameBuffer.h
src/cpp/include/Core/: ConfigurationManager.h  CoreEngine.h  ErrorHandling.h  HardwareAccelerator.h  MemoryManager.h  PluginManager.h
src/cpp/include/GUI/: MainApplication.h  WorkflowUI.h
src/cpp/include/VideoRepair/: VideoRepairEngine.h
src/cpp/include/VideoRepair/FormatParsers/: BRAWParser.h  ProResParser.h
src/cpp/resources/: resources.qrc
src/cpp/src/: AIAnalyzer.cpp  AdvancedCryptAnalyzer.cpp  BlockchainForensicsEngine.cpp  CaseManager.cpp  DiskImager.cpp  DistributedComputingEngine.cpp  FileCarver.cpp  ForensicLogger.cpp  ImageWriters.cpp  LogViewer.cpp  MLClassifier.cpp  MainWindow.cpp  MemoryForensicsEngine.cpp  NetworkForensicsEngine.cpp  NewCaseDialog.cpp  PatternMatcher.cpp  PerformanceMonitor.cpp  RaidReconstructor.cpp  SettingsDialog.cpp  SignatureDatabase.cpp  VideoRebuilder.cpp  WorkerThread.cpp  main.cpp
src/cpp/src/AdvancedVideoRepair/: AdvancedRobustnessSystem.cpp  AdvancedRobustnessSystem_Part2.cpp  AdvancedVideoRepairEngine.cpp  ContainerAnalyzer.cpp  FrameReconstructor.cpp  RobustnessIntegration.cpp  cuda_kernels.cu
src/cpp/src/Core/: ConfigurationManager.cpp  ErrorHandling.cpp  MemoryManager.cpp  PluginManager.cpp
src/cpp/src/VideoRepair/: VideoRepairEngine.cpp
src/cpp/src/VideoRepair/FormatParsers/: BRAWParser.cpp  ProResParser.cpp
src/cpp/tests/: CMakeLists.txt  main.cpp  test_container_analyzer.cpp  test_cuda_kernels.cu  test_example.cpp  test_ffmpeg_integration.cpp  test_frame_reconstructor.cpp  test_integration.cpp  test_video_repair_engine.cpp
src/cpp/ui/: MainWindow.ui  NewCaseDialog.ui  SettingsDialog.ui
src/hooks/: useElectronAPI.ts
src/python/: advanced_container_analyzer.py  advanced_repair_engine.py  ai_intelligence_engine.py  disk_imager.py  file_carver.py  filesystem_parser.py  intelligent_strategy_engine.py  logging_config.py  orchestration_engine.py  parallel_engine.py  raid_recovery.py  unified_api.py  validation_reporting.py  video_rebuilder.py  video_repair_orchestrator.py
src/renderer/: App.tsx  index.html  index.tsx
src/store/: index.ts
src/store/slices/: analysisSlice.ts  appSlice.ts  recoverySlice.ts  repairSlice.ts  settingsSlice.ts  systemSlice.ts  uiSlice.ts
src/styles/: GlobalStyles.ts  theme.ts  tokens.ts
src/types/: index.ts  styled.d.ts
tests/: __init__.py  conftest.py  test_file_carver.py  test_filesystem_parser.py  test_integration.py  test_main.py  test_raid_recovery.py  test_robustness_system.cpp
threads/: repair_thread.py
